Font fix on mobile in Settings/GeneralInformation

--- a/BookujFront/src/pages/BusinessDashboard/BusinessSettings/BusinessDetails/BusinessGeneralInformation/BusinessGeneralInformation.css
+++ b/BookujFront/src/pages/BusinessDashboard/BusinessSettings/BusinessDetails/BusinessGeneralInformation/BusinessGeneralInformation.css
@@ -187,6 +187,10 @@
     padding: 1rem;
   }
 
+  .business-settings-details-generalInformation-header-back h1 {
+    font-size: 30px;
+  }
+
   .business-settings-details-generalInformation-header-save {
     width: 100%;
   }
